fix: add word-wrap to css

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -4816,3 +4816,6 @@ ul.widget_profile_box li:first-child {
 pre{
   background-color: #fff;
 }
+p{
+  word-wrap: break-word;
+}
